# ms-ibi-pe-potential

./: .gitignore  README.md  diffusion.in
bibi/: bibi.py
bibi/ibi/: convergence.py  distributions.py  ibi_config.py  ibi_method.py  initial_potentials.py  lammps.py  plotting.py  pressure_correction.py  slurm.py  update_potentials.py
bibi/plotting/: plot_convergence.py  plot_final_results.py  plot_pressure.py  plot_weight_comparisons.py  plotstyle.py
bibi/templates/: agave.slurm.sh  cg_distributions.in  lammps.cg_sampling.in  lammps.pressure_correction.in  sol.slurm.sh
cg-distributions/: CMakeLists.txt  README.md
cg-distributions/doc/: README
cg-distributions/include/: bintable.h  cgsystem.h  distribution.h  geometry.h  histogram.h  input.h  lammps_data.h  matrix.h  string_tools.h  vector.h
cg-distributions/scripts/: FitBondAngle.py  kernel-rdf.py  plot_distributions.py  plotstyle.py
cg-distributions/src/: bintable.cpp  cgsystem.cpp  distribution.cpp  histogram.cpp  input.cpp  lammps_data.cpp  main.cpp
cg-distributions/src/test/: test_adf.cpp  test_bdf.cpp  test_geometry.cpp  test_rdf.cpp  test_tdf.cpp
cg-distributions/test-data/: README  alpha_a5b2c10.lammps  alpha_a5b2c10.lammpstrj
crystal_diffusion/: diffusion.in
crystal_diffusion/0/: README
crystal_diffusion/100/potentials/: angle.table.AAA  (+1 more)
potentials/: README.md  angle.0.table.AAA  angle.25.table.AAA  angle.90.table.AAA  bond.0.table.AA  bond.25.table.AA  bond.75.table.AA  pair.0.table.AA  pair.50.table.AA  pair.90.table.AA
simulations/crystal_diffusion/: diffusion.in  run_all_diffusion.sh
(+69 files in other folders)
